--- a/index.html
+++ b/index.html
@@ -1,51 +1,382 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar with Image Overlay</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .navbar {
-            background: #333;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-        .image-container {
-            position: relative;
-            text-align: center;
-            color: white;
-        }
-        .image-container img {
-            width: 100%;
-            height: 80vh;
-            object-fit: cover;
-            display: block;
-        }
-        .centered-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 10px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Terra Leaf</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #F4F3EF;
+      color: #2E2E2E;
+      overflow-x: hidden;
+    }
+
+    header {
+      background-color: #F4F3EF;
+      padding: 15px 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      position: relative;
+      z-index: 1001;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+      position: relative;
+    }
+
+    .search-form {
+      display: flex;
+      gap: 5px;
+    }
+
+    .search-form input[type="text"] {
+      padding: 6px 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .search-form button {
+      padding: 6px 12px;
+      background-color: #9BA17B;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .menu-toggle {
+      font-size: 26px;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: #2E2E2E;
+      display: none;
+    }
+
+    .logo {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .logo img {
+      height: 50px;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: #2E2E2E;
+      font-size: 18px;
+      transition: color 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      color: #9BA17B;
+    }
+
+    .side-drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      height: 100%;
+      width: 250px;
+      background-color: #ffffff;
+      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+      padding-top: 70px;
+      transition: left 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      z-index: 1000;
+    }
+
+    .side-drawer a {
+      padding: 15px 25px;
+      border-bottom: 1px solid #eee;
+      color: #2E2E2E;
+      font-size: 18px;
+    }
+
+    .side-drawer a:hover {
+      background-color: #f0f0f0;
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links,
+      .search-form {
+        display: none;
+      }
+
+      .logo {
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+      }
+    }
+
+    /* Carousel */
+    .carousel {
+      position: relative;
+      max-width: 100%;
+      height: 90vh;
+      overflow: hidden;
+    }
+
+    .carousel-images {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+      height: 90%;
+    }
+
+    .carousel-images img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+
+    .carousel-buttons {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      padding: 0 20px;
+    }
+
+    .carousel-buttons button {
+      background-color: rgba(0, 0, 0, 0.4);
+      color: white;
+      border: none;
+      padding: 10px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .carousel-buttons button:hover {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    /* Info Section */
+    .info-section {
+      display: flex;
+      justify-content: space-around;
+      align-items: stretch;
+      flex-wrap: wrap;
+      padding: 50px 20px;
+      gap: 20px;
+      background-color: #fff;
+    }
+
+    .info-box {
+      flex: 1 1 300px;
+      background-color: #F4F3EF;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+
+    .info-box img {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+
+    .info-box h3 {
+      margin-bottom: 10px;
+      color: #9BA17B;
+    }
+
+    .info-box p {
+      font-size: 16px;
+    }
+
+    .carousel {
+      position: relative;
+      max-width: 100%;
+      height: 90vh;
+      overflow: hidden;
+    }
+
+    .hero-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #575648;
+      font-size: clamp(2rem, 8vw, 5rem);
+      letter-spacing: 0.5em;
+      font-weight: bold;
+      opacity: 0;
+      animation: fadeIn 2s ease forwards;
+      text-align: center;
+      white-space: nowrap;
+      z-index: 2;
+      pointer-events: none;
+    }
+
+
+
+    .carousel-images {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .carousel-images img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+
+    /* Only fade in */
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.95); }
+      100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+    }
+
+    .desktop-img {
+      display: block;
+    }
+
+    .mobile-img {
+      display: none;
+    }
+
+    /* Show mobile image on screens less than 768px */
+    @media (max-width: 768px) {
+      .desktop-img {
+        display: none;
+      }
+
+      .mobile-img {
+        display: block;
+      }
+    }
+
+
+
+  </style>
 </head>
 <body>
-    <div class="navbar">My Website</div>
-    <div class="image-container">
-        <img src="assets/home.jpeg" alt="Sample Image">
-        <div class="centered-text">Welcome to My Website</div>
+
+  <!-- NAVBAR -->
+  <header>
+    <nav class="navbar">
+      <button class="menu-toggle" onclick="toggleDrawer()">☰</button>
+
+      <!-- Search Form -->
+      <form class="search-form" action="/search" method="GET">
+        <input type="text" name="q" placeholder="Search...">
+        <button type="submit">Search</button>
+      </form>
+
+      <!-- Centered Logo -->
+      <div class="logo">
+        <img src="/mnt/data/the terra leaf logo.png" alt="The Terra Leaf Logo" />
+      </div>
+
+      <!-- Nav Menu -->
+      <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- SIDE DRAWER FOR SMALL SCREEN -->
+  <div class="side-drawer" id="sideDrawer">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Products</a>
+    <a href="#">Contact</a>
+  </div>
+
+  <!-- FULLSCREEN CAROUSEL -->
+  <section class="carousel">
+    <div class="carousel-images" id="carouselImages">
+      <img src="assets/plates.png" alt="Hero Slide" class="desktop-img" />
+      <img src="assets/plates-mobile.png" alt="Hero Slide Mobile" class="mobile-img" />
+    </div>    
+    <div class="hero-text">THE TERRA LEAF</div>
+  </section>
+  
+  
+  
+  
+
+  <!-- INFO SECTION BELOW HERO -->
+  <section class="info-section">
+    <div class="info-box">
+      <img src="assets/img1.jpg" alt="Feature 1">
+      <h3>Eco-Friendly</h3>
+      <p>Our products are made with sustainability and the environment in mind.</p>
     </div>
+    <div class="info-box">
+      <img src="assets/img2.jpg" alt="Feature 2">
+      <h3>Natural Ingredients</h3>
+      <p>Only the finest natural and organic ingredients go into our products.</p>
+    </div>
+    <div class="info-box">
+      <img src="assets/img3.jpg" alt="Feature 3">
+      <h3>Handcrafted</h3>
+      <p>Lovingly made by hand to ensure quality and care in every item.</p>
+    </div>
+  </section>
+
+  <script>
+    function toggleDrawer() {
+      document.getElementById('sideDrawer').classList.toggle('open');
+    }
+
+    // Carousel JS
+    const carouselImages = document.getElementById("carouselImages");
+    const totalSlides = carouselImages.children.length;
+    let index = 0;
+
+    function showSlide(i) {
+      index = (i + totalSlides) % totalSlides;
+      carouselImages.style.transform = `translateX(-${index * 100}%)`;
+    }
+
+    function nextSlide() {
+      showSlide(index + 1);
+    }
+
+    function prevSlide() {
+      showSlide(index - 1);
+    }
+
+    setInterval(nextSlide, 5000); // Auto slide every 5 sec
+  </script>
+
 </body>
 </html>
