--- a/index.html
+++ b/index.html
@@ -216,69 +216,75 @@
     }
 
     .carousel {
-      position: relative;
-      max-width: 100%;
-      height: 90vh;
-      overflow: hidden;
-    }
+    position: relative;
+    max-width: 100%;
+    height: 90vh;
+    overflow: hidden;
+  }
 
+  .carousel-images {
+    height: 100%;
+    width: 100%;
+  }
+
+  .carousel-images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  @keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.hero-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #575648;
+  font-size: clamp(2rem, 8vw, 5rem);
+  letter-spacing: 0.5em;
+  font-weight: bold;
+  opacity: 0;
+  text-align: center;
+  white-space: nowrap;
+  z-index: 2;
+  pointer-events: none;
+  animation: fadeIn 1.5s ease forwards;
+}
+
+
+  /* Smaller font on mobile */
+  @media (max-width: 768px) {
     .hero-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #575648;
-      font-size: clamp(2rem, 8vw, 5rem);
-      letter-spacing: 0.5em;
-      font-weight: bold;
-      opacity: 0;
-      animation: fadeIn 2s ease forwards;
-      text-align: center;
-      white-space: nowrap;
-      z-index: 2;
-      pointer-events: none;
-    }
-
-
-
-    .carousel-images {
-      height: 100%;
-      width: 100%;
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-    }
-
-    .carousel-images img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-
-    /* Only fade in */
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.95); }
-      100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+      font-size: clamp(1.2rem, 5vw, 2.5rem);
+      letter-spacing: 0.3em;
     }
 
     .desktop-img {
-      display: block;
-    }
-
-    .mobile-img {
       display: none;
     }
 
-    /* Show mobile image on screens less than 768px */
-    @media (max-width: 768px) {
-      .desktop-img {
-        display: none;
-      }
-
-      .mobile-img {
-        display: block;
-      }
+    .mobile-img {
+      display: block;
     }
+  }
+
+  .desktop-img {
+    display: block;
+  }
+
+  .mobile-img {
+    display: none;
+  }
 
 
 
@@ -322,17 +328,14 @@
 
   <!-- FULLSCREEN CAROUSEL -->
   <section class="carousel">
-    <div class="carousel-images" id="carouselImages">
+    <div class="carousel-images">
       <img src="assets/plates.png" alt="Hero Slide" class="desktop-img" />
       <img src="assets/plates-mobile.png" alt="Hero Slide Mobile" class="mobile-img" />
-    </div>    
+    </div>
     <div class="hero-text">THE TERRA LEAF</div>
   </section>
-  
-  
-  
-  
 
+  
   <!-- INFO SECTION BELOW HERO -->
   <section class="info-section">
     <div class="info-box">
@@ -356,26 +359,6 @@
     function toggleDrawer() {
       document.getElementById('sideDrawer').classList.toggle('open');
     }
-
-    // Carousel JS
-    const carouselImages = document.getElementById("carouselImages");
-    const totalSlides = carouselImages.children.length;
-    let index = 0;
-
-    function showSlide(i) {
-      index = (i + totalSlides) % totalSlides;
-      carouselImages.style.transform = `translateX(-${index * 100}%)`;
-    }
-
-    function nextSlide() {
-      showSlide(index + 1);
-    }
-
-    function prevSlide() {
-      showSlide(index - 1);
-    }
-
-    setInterval(nextSlide, 5000); // Auto slide every 5 sec
   </script>
 
 </body>
