our collection button

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 .hero-text {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #575648;
@@ -265,7 +265,7 @@
   /* Smaller font on mobile */
   @media (max-width: 768px) {
     .hero-text {
-      font-size: clamp(1.2rem, 5vw, 2.5rem);
+      font-size: clamp(1.5rem, 6.5vw, 3.5rem);
       letter-spacing: 0.3em;
     }
 
@@ -284,6 +284,25 @@
 
   .mobile-img {
     display: none;
+  }
+
+  .view-products-btn {
+    position: absolute;
+    top: 50%; /* Adjust this value to control the vertical placement */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #9BA17B;
+    color: white;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 25px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    z-index: 3;
+  }
+
+  .view-products-btn:hover {
+    background-color: #7a8a5a;
   }
 
 
@@ -333,7 +352,10 @@
       <img src="assets/plates-mobile.png" alt="Hero Slide Mobile" class="mobile-img" />
     </div>
     <div class="hero-text">THE TERRA LEAF</div>
+    <!-- View Products Button -->
+    <a href="#products" class="view-products-btn">Our Collection</a>
   </section>
+  
 
   
   <!-- INFO SECTION BELOW HERO -->
