small corrections in products page and aded navbar in product page

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
       transition: color 0.3s ease;
     }
 
+    .nav-links a.active {
+        color: white;
+        background-color: #cf4c2b; /* Orange background for highlighting */
+        border-radius: 5px;
+        padding: 5px 5px;
+    }
+
     .nav-links a:hover {
       color: #9BA17B;
     }
@@ -556,9 +563,9 @@
 
       <!-- Nav Menu -->
       <div class="nav-links">
-        <a href="#">Home</a>
+        <a href="#home" class="active">Home</a>
         <a href="#">About</a>
-        <a href="#">Products</a>
+        <a href="products.html">Products</a>
         <a href="#">Contact</a>
       </div>
     </nav>
@@ -566,10 +573,10 @@
 
   <!-- SIDE DRAWER FOR SMALL SCREEN -->
   <div class="side-drawer" id="sideDrawer">
-    <a href="#home">Home</a>
-    <a href="#">About</a>
-    <a href="#">Products</a>
-    <a href="#">Contact</a>
+    <a href="#home" class ="active" style="text-decoration: none;">Home</a>
+    <a href="#" style="text-decoration: none;">About</a>
+    <a href="#" style="text-decoration: none;">Products</a>
+    <a href="#" style="text-decoration: none;">Contact</a>
   </div>
 
   <!-- FULLSCREEN CAROUSEL -->
@@ -660,7 +667,6 @@
     <button onclick="window.location.href='products.html'">See More</button>
   </section>
      
-
   <script>
     document.querySelector('.menu-toggle').addEventListener('click', function() {
       document.getElementById('sideDrawer').classList.toggle('open');
