--- a/products.html
+++ b/products.html
@@ -153,7 +153,7 @@ body {
 
 .info-box {
   flex: 1 1 calc(33.333% - 20px); /* Default to 3 items per row (desktop) */
-  background-color: #cddac8;
+  background-color: #F4F3EF;
   border-radius: 10px;
   padding: 20px;
   text-align: center;
@@ -351,6 +351,12 @@ body {
       </div>
     </div>
   </div>
+
+  <script>
+    document.querySelector('.menu-toggle').addEventListener('click', function() {
+      document.getElementById('sideDrawer').classList.toggle('open');
+    });
+  </script>
 
   <script>
     // Product data (can be fetched from a database or API in real-world use)
